# aladin-contracts-1.6

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md
contracts/: CMakeLists.txt
contracts/alaio.bios/: CMakeLists.txt
contracts/alaio.bios/include/alaio.bios/: alaio.bios.hpp
contracts/alaio.bios/src/: alaio.bios.abi  alaio.bios.cpp
contracts/alaio.msig/: CMakeLists.txt  README.md
contracts/alaio.msig/include/alaio.msig/: alaio.msig.hpp
contracts/alaio.msig/src/: alaio.msig.abi  alaio.msig.cpp
contracts/alaio.system/: CMakeLists.txt  README.md
contracts/alaio.system/include/alaio.system/: alaio.system.hpp  exchange_state.hpp  native.hpp  rex.results.hpp
contracts/alaio.system/src/: alaio.system.cpp  delegate_bandwidth.cpp  exchange_state.cpp  oracle.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  voting.cpp
contracts/alaio.token/: CMakeLists.txt  README.md
contracts/alaio.token/include/alaio.token/: alaio.token.hpp
contracts/alaio.token/src/: alaio.token.cpp
contracts/alaio.wrap/: CMakeLists.txt  README.md
contracts/alaio.wrap/include/alaio.wrap/: alaio.wrap.hpp
contracts/alaio.wrap/src/: alaio.wrap.abi  alaio.wrap.cpp
contracts/dapp_registry/: CMakeLists.txt  README.md
contracts/dapp_registry/include/dapp_registry/: dapp_registry.hpp
contracts/dapp_registry/include/dummy_app/: dummy_app.hpp
contracts/dapp_registry/src/: dapp_registry.cpp  dummy_app.cpp
contracts/domain/: .domain.cpp.swp  domain.abi  domain.cpp  domain.wasm
contracts/eosio.bios/include/eosio.bios/: eosio.bios.hpp
contracts/eosio.bios/src/: eosio.bios.abi  eosio.bios.wasm
contracts/eosio.msig/: README.md
contracts/eosio.msig/src/: eosio.msig.abi  eosio.msig.wasm
contracts/eosio.system/: CMakeLists.txt
contracts/eosio.system/include/eosio.system/: eosio.system.hpp  exchange_state.hpp  (+1 more)
contracts/eosio.system/ricardian/: eosio.system.contracts.md.in
contracts/eosio.system/src/: delegate_bandwidth.cpp  eosio.system.abi  eosio.system.cpp  eosio.system.wasm  oracle.cpp  producer_pay.cpp  rex.cpp  voting.cpp
contracts/eosio.token/src/: eosio.token.abi  eosio.token.cpp  eosio.token.wasm
contracts/eosio.wrap/: README.md
contracts/eosio.wrap/src/: eosio.wrap.abi  eosio.wrap.wasm
contracts/subdomain/: subdomain.abi  subdomain.cpp  subdomain.wasm
contracts/transfer_notifier/: CMakeLists.txt  README.md
contracts/transfer_notifier/src/: transfer_notifier.cpp
tests/: CMakeLists.txt  eosio.system_tester.hpp  eosio.system_tests.cpp
tests/test_contracts/: exchange.wast
(+2 files in other folders)
